--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client": "cd client && npm start",
     "start": "node server.js",
     "forever": "forever -w server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
