--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loader": "^2.4.5",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "react-spinners": "^0.6.0"
   },
