--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-loader": "^2.4.5",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
-    "react-spinners": "^0.6.0"
+    "react-spinners": "^0.6.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {},
   "scripts": {
